# wishscrape

./: .gitignore  default.nix  shell.nix  wishscrape.cabal
app/: Main.hs
