cabal-version:      2.4
name:               wishscrape
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A program to export your Steam wishlist to a csv file

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             James Jackson
maintainer:         j.e.m.jackson@gmail.com

-- A copyright notice.
-- copyright:
category: Gaming
--extra-source-files: CHANGELOG.md

executable wishscrape
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    aeson  ^>=2.1.2.1,
                      base >= 4.18.2 && < 4.19,
                      bytestring >= 0.11.4 && < 0.12,
                      cassava >= 0.5.3 && < 0.6,
                      containers ^>=0.6.5.1,
                      http-client >= 0.7.13 && < 0.8,
                      http-conduit >= 2.3.8 && < 2.4,
                      uri-encode ^>=1.5.0.7,
                      vector ^>=0.13.0.0
    hs-source-dirs:   app
    default-language: Haskell2010
    
